--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <span>H</span>
         <span>A</span>
         <span>L</span>
-        <span>L</span>
         <span>O</span>
+        <span></span>
         <span>K</span>
         <span>A</span>
         <span>M</span>
