--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <span>L</span>
         <span>O</span>
         <span></span>
-        <span>L</span>
-        <span>Y</span>
+        <span>I</span>
+        <span>N</span>
+        <span>D</span>
         <span>A</span>
-        <span>R</span>
-        <span>A</span>
+        <span>H</span>
     </div>
     <div class="description">
         <span>Aku punya hadiah spesial buat kamu nih....</span>
