--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span>A</span>
         <span>L</span>
         <span>O</span>
-        <span></span>
+        <br>
         <span>I</span>
         <span>N</span>
         <span>D</span>
@@ -23,7 +23,7 @@
         <span>H</span>
     </div>
     <div class="description">
-        <span>Aku punya hadiah spesial buat kamu nih....</span>
+        <span>Aku ada sesuatu buat kamuu, semoga kamu suka yaa!</span>
     </div>
     <div class="button">
         <button>
