--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <span>H</span>
     </div>
     <div class="description">
-        <span>Aku ada sesuatu buat kamuu, semoga kamu suka yaa!</span>
+        <span>Aku ada sesuatu buat kamuu,</span>
+        <br>
+        <span>semoga kamu suka yaa!</span>
     </div>
     <div class="button">
         <button>
